# HEPLike

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/HFLAV/2019/tau/: HFLAV_2019_160.yaml  HFLAV_2019_165.yaml  HFLAV_2019_167.yaml  HFLAV_2019_170.yaml  HFLAV_2019_171.yaml  HFLAV_2019_179.yaml  HFLAV_2019_180.yaml  HFLAV_2019_181.yaml  HFLAV_2019_212.yaml
data/examples/: HFLAV_2019_180.yaml  b2mumu.yaml~  histB2mumu.root  test.yaml  test_3dim.yaml  test_3dimassym.yaml  test_bi.yaml
data_toy/: template.yaml
data_toy/HFLAV/2019/tau/: HFLAV_2019_157.yaml  HFLAV_2019_161.yaml  HFLAV_2019_162.yaml  HFLAV_2019_164.yaml  HFLAV_2019_166.yaml  HFLAV_2019_168.yaml  HFLAV_2019_169.yaml  HFLAV_2019_176.yaml  HFLAV_2019_177.yaml  HFLAV_2019_178.yaml  HFLAV_2019_182.yaml  HFLAV_2019_211.yaml
data_toy/LHCb/RD/RKstar/: CERN-EP-2017-100_q2_0.045_1.1.yaml  CERN-EP-2017-100_q2_1.1_6.yaml  HEPData-ins1599846-v1-Table_1.root  HEPData-ins1599846-v1-Table_2.root
data_toy/examples/: HFLAV_2019_180_dummy.yaml  RKstar_lowq2.yaml  b2mumu.yaml
data_toy/toy/: README  dummy.yaml  gen.cc
include/: GAMBIT_Stats.h  HEPBRLimit.h  HEPBR_BifurGaussian.h  HEPBR_Gaussian.h  HEPBR_Limit.h  HEPBR_ProfLikelihood.h  HEPBR_nDimBifurGaussian.h  HEPBR_nDimLikelihood.h  HEPData.h  HEPStats.h  HL_BifurGaussian.h  HL_Constants.h  HL_Data.h  HL_ExpPoints.h  HL_Function.h  HL_Gaussian.h  HL_Interpolator.h  HL_Limit.h  HL_Minimizer.h  HL_ProfLikelihood.h  HL_Root.h  HL_Stats.h  HL_nDimBifurGaussian.h  HL_nDimGaussian.h  HL_nDimLikelihood.h  HepData.h  cmake_variables.h  cmake_variables.h.in  constants.h  limit.h  stats.h
main/: BrBifurGaussian_example.cc  Br_example.cc  Data_Fit_example.cc  Limit_example.cc  Ndim_BifurGaussian_example.cc  Ndim_Gaussian.cc  Ndim_Likelihood_example.cc  ProfLikelihood_example.cc  Test_YAML.cc
src/: GAMBIT_Stats.cc  HEPBRLimit.cc  HEPBR_BifurGaussian.cc  HEPBR_Gaussian.cc  HEPBR_Limit.cc  HEPBR_ProfLikelihood.cc  HEPBR_nDimBifurGaussian.cc  HEPBR_nDimLikelihood.cc  HEPData.cc  HEPStats.cc  HL_BifurGaussian.cc  HL_Data.cc  HL_ExpPoints.cc  HL_Gaussian.cc  HL_Interpolator.cc  HL_Limit.cc  HL_Minimizer.cc  HL_ProfLikelihood.cc  HL_Stats.cc  HL_nDimBifurGaussian.cc  HL_nDimGaussian.cc  HL_nDimGaussian.cc~  HL_nDimLikelihood.cc  HepData.cc  stats.cc
utils/: lookup.py  make_citations.py
yaml-cpp/: CMakeLists.txt  ORIG_CMakeLists.txt
yaml-cpp/include/yaml-cpp/: dll.h
yaml-cpp/src/: collectionstack.h
